starter/rolling-update/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starter
  namespace: openmsa
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "starter.openmsa.monster"  # 접속하고자 하는 host명
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: starter   # Service의 Name과 동일하게 맞춤
            port:
              number: 8080    # Service를 통해 노출된 port와 동일하게 맞춤
